--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,15 @@ node_modules/
 dist/
 npm-debug.log
 yarn-error.log
-
+firebase.json
+database.rules.json
+firestore.indexes.json
+.vscode/
+.firebase/
 # Editor directories and files
 .idea
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
+*.rules
