--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": " webpack-dev-server --open --hot",
-    "build": " webpack --progress --hide-modules"
+    "dev": " webpack-dev-server --open",
+    "build": " webpack --progress --hide-modules --optimize-minimize"    
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.13.0",
+    "firebase": "^7.14.2",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6"
   },
   "browserslist": [
     "> 1%",
