--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "private": true,
   "scripts": {
     "dev": " webpack-dev-server --open",
-    "build": " webpack --progress --hide-modules --optimize-minimize"    
+    "build": " webpack --progress --hide-modules --optimize-minimize"
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
     "firebase": "^7.14.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "webpack-cli": "^3.3.11"
   },
   "browserslist": [
     "> 1%",
