--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": " webpack --progress --hide-modules --optimize-minimize"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
     "firebase": "^7.14.2",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6",
     "webpack-cli": "^3.3.11"
   },
