--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
   "private": true,
   "scripts": {
     "dev": " webpack-dev-server --open",
-    "build": " webpack --progress --hide-modules --optimize-minimize"
+    "build": " webpack --mode production"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
     "firebase": "^7.14.2",
+    "link-prevue": "^1.1.3",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.7.2"
   },
   "browserslist": [
     "> 1%",
@@ -32,10 +35,9 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "vue-loader": "^15.9.2",
+    "vue-template-compiler": "^2.6.11",
+    "webpack-dev-server": "^2.11.5"
   },
   "main": "webpack.config.js",
   "repository": {
